Added good thing that work

--- a/dynmap.html
+++ b/dynmap.html
@@ -70,14 +70,13 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-<<<<<<< HEAD
-    <iframe src="198.100.145.211:8123/" width="100%" height="1200">
+    <<<<<<< HEAD <iframe src="http://198.100.145.211:8123" width="100%" height="1200">
         <p>Your browser does not support iframes.</p>
-=======
-    <iframe src="http://YOURSERVERIP:8123/" width="100%" height="1200">
-        <p>Your browser does not support iframes.A</p>
->>>>>>> develop
-    </iframe>
+        =======
+        <iframe src="http://YOURSERVERIP:8123/" width="100%" height="1200">
+            <p>Your browser does not support iframes.A</p>
+            >>>>>>> develop
+        </iframe>
 
 </body>
 
