--- a/dynmap.html
+++ b/dynmap.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -70,13 +70,11 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <<<<<<< HEAD <iframe src="http://198.100.145.211:8123" width="100%" height="1200">
-        <p>Your browser does not support iframes.</p>
-        =======
-        <iframe src="http://YOURSERVERIP:8123/" width="100%" height="1200">
-            <p>Your browser does not support iframes.A</p>
-            >>>>>>> develop
-        </iframe>
+
+    <iframe src="http://198.100.145.211:8123" width="100%" height="1000">
+        <p>Your browser does not support iframes.A</p>
+
+    </iframe>
 
 </body>
 
