--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
