--- a/overviewer.html
+++ b/overviewer.html
@@ -70,11 +70,8 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+<!---THIS WHOLE THING WILL PROBABLLY BE DELETED ONCE THE MINCERAFT OVERVIEWER GET SETUP--->
 
-    <iframe src="http://198.100.145.211:8123" width="100%" height="1000">
-        <p>Your browser does not support iframes.A</p>
-
-    </iframe>
 
 </body>
 
