--- a/apply.html
+++ b/apply.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Kingdom Life RPG</a>
+                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,7 +33,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="staff.html">Staff</a></li>
-                    <li><a href="dynmap.html">Dynmap</a></li>
+                    <li><a href="map/index.html">Map</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
