--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="staff.html">Staff</a></li>
-                    <li><a href="dynmap.html">Dynmap</a></li>
+                    <li><a href="map/index.html">Map</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
