Started work on the town page

--- a/towns.html
+++ b/towns.html
@@ -32,6 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li class="dropdown">
@@ -63,6 +64,53 @@
             </div>
         </div>
     </center>
+    <div class="container-fluid">
+        <div class="row">
+            <div class=" col-md-offset-1 col-md-7">
+                <div class="img-container">
+                    <img src="assets/imgs/marketoutside.png">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h1>
+                Who we are    
+                </h1>
+                <p>
+                    The Kingdom of Danne- Once a thriving, prosperous and happy kingdom ruled by a kind and generous king. However, a dark force kidnapped him, filling the jovial land with evil monsters and dark magic. Will you help us find our King? Will you help save Danne? The server is currently in development, and is expected to be released soon. If you're interested in helping us out, apply today.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-2">
+                <h1>Quests</h1>
+                <p>Travel the map completing tons of custom quests, battling mobs and completing tasks to earn XP and emeralds in an attempt to level up and find clues to the King's whereabouts. Along the way, you'll encounter tons of Kingdom citizens, all of who need your help.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Weapons</h1>
+                <p>Battle endless numbers of mobs and compete in PVP dueling with our custom weapons. Each weapon is equipped with various damage levels, and are classified as common, uncommon, unique and rare. The higher level you are, the more powerful the weapons you'll unlock.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Dungeons</h1>
+                <p>Battle your way through multiple dungeons throughout the map. You'll have to fight, climb, parkour, and solve puzzles before fighting the boss at the end. If you're successful, you'll be awarded XP and emeralds.</p>
+            </div>
+            <div class="col-md-2">
+                <h1>Unique Features</h1>
+                <ul>
+                    <li>Pure custom plugins</li>
+                    <li>1000x1000 map to explore</li>
+                    <li>Leveling system & XP earning</li>
+                    <li>Magic spells, enchanted weapons and powerful armor</li>
+                    <li>Towns to discover</li>
+                    <li>Interactive storyline and lore</li>
+                    <li>Endless fun</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
