--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
+                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li class="dropdown">
