Update towns.html need to work more

--- a/towns.html
+++ b/towns.html
@@ -76,7 +76,7 @@
                 Who we are    
                 </h1>
                 <p>
-                    The Kingdom of Danne- Once a thriving, prosperous and happy kingdom ruled by a kind and generous king. However, a dark force kidnapped him, filling the jovial land with evil monsters and dark magic. Will you help us find our King? Will you help save Danne? The server is currently in development, and is expected to be released soon. If you're interested in helping us out, apply today.
+                    The world is filled with so many towns and so many interesting people. Go explore, trade, and take back your kingdom. 
                 </p>
             </div>
 
