Fixed the gallery and fixed the spells navbar

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Lens by HTML5 UP</title>
+    <title>Gallery</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -24,85 +24,75 @@
 
         <!-- Header -->
         <header id="header">
-            <h1>Lens</h1>
-            <p>Just another fine responsive site template by <a href="http://html5up.net">Kingdom Life Gallery</a></p>
-            <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-            </ul>
+            <h1>Gallery</h1>
+            <p> Kingdom Life Gallery</p>
+
         </header>
 
         <!-- Thumbnail -->
         <section id="thumbnails">
             <article>
-                <a class="thumbnail" href="../assets/imgs/2015-12-15_21.09.16.png" data-position="left center"><img src="../assets/imgs/2015-12-15_21.09.16.png" alt="" /></a>
-                <h2>Diam tempus accumsan</h2>
+                <a class="thumbnail" href="../assets/imgs/building1.png" data-position="left center"><img src="../assets/imgs/building1.png" alt="" /></a>
+                <h2>Just some Buildings</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </article>
             <article>
-                <a class="thumbnail" href="../assets/imgs/2015-12-15_21.03.37.png"><img src="../assets/imgs/2015-12-15_21.03.37.png" alt="" /></a>
+                <a class="thumbnail" href="../assets/imgs/building2.png"><img src="../assets/imgs/building2.png" alt="" /></a>
                 <h2>Vivamus convallis libero</h2>
                 <p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
+                <a class="thumbnail" href="../assets/imgs/castle.png" data-position="top center"><img src="../assets/imgs/castle.png" alt="" /></a>
                 <h2>Nec accumsan enim felis</h2>
                 <p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
+                <a class="thumbnail" href="../assets/imgs/entrance1.png"><img src="../assets/imgs/entrance1.png" alt="" /></a>
                 <h2>Donec maximus nisi eget</h2>
                 <p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
+                <a class="thumbnail" href="../assets/imgs/entrance2.png" data-position="top center"><img src="../assets/imgs/entrance2.png" alt="" /></a>
                 <h2>Nullam vitae nunc vulputate</h2>
                 <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-                <h2>Phasellus magna faucibus</h2>
-                <p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+                <a class="thumbnail" href="../assets/imgs/marketoutside.png" data-position="top center"><img src="../assets/imgs/marketoutside.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-                <h2>Proin quis mauris</h2>
-                <p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+                <a class="thumbnail" href="../assets/imgs/tower1.png" data-position="top center"><img src="../assets/imgs/tower1.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-                <h2>Gravida quis varius enim</h2>
-                <p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+                <a class="thumbnail" href="../assets/imgs/tower2.png" data-position="top center"><img src="../assets/imgs/tower2.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-                <h2>Morbi eget vitae adipiscing</h2>
-                <p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+                <a class="thumbnail" href="../assets/imgs/tower3.png" data-position="top center"><img src="../assets/imgs/tower3.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-                <h2>Habitant tristique senectus</h2>
-                <p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+                <a class="thumbnail" href="../assets/imgs/windmill1.png" data-position="top center"><img src="../assets/imgs/windmill1.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
             <article>
-                <a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-                <h2>Pharetra ex non faucibus</h2>
-                <p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
-            </article>
-            <article>
-                <a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-                <h2>Mattis lorem sodales</h2>
-                <p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+                <a class="thumbnail" href="../assets/imgs/windmill2.png" data-position="top center"><img src="../assets/imgs/windmill2.png" alt="" /></a>
+                <h2>Nullam vitae nunc vulputate</h2>
+                <p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
             </article>
         </section>
 
         <!-- Footer -->
         <footer id="footer">
             <ul class="copyright">
-                <li>&copy; Untitled.</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <p>This was created by the people over at HTML UP. Go and give them some support.</p>
             </ul>
         </footer>
 
