Fixed things and Just a push

--- a/towns.html
+++ b/towns.html
@@ -35,6 +35,7 @@
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
+                    <li><a href="gallery/gallery.html">Gallery</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -58,9 +59,7 @@
     <center>
         <div class="jumbotron bg">
             <div class="container" style="height: 400px;">
-                <h1>Kingdom Life</h1>
-                <p>Take back your kingdom</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Apply For Staff</a></p>
+                <h1>Features</h1>
             </div>
         </div>
     </center>
@@ -73,11 +72,10 @@
             </div>
             <div class="col-md-3">
                 <h1>
-                Who we are    
+           Towns
                 </h1>
                 <p>
-                    The world is filled with so many towns and so many interesting people. Go explore, trade, and take back your kingdom. 
-                </p>
+                    Once King Gabriel was kidnapped, the land of Danne fell to ruin. Civilization seemed to crumble right along with the walls of the many glorious cities in Danne. Under Prince Traeton's leadership, the towns began to regroup and rebuild- each focusing on a particular area to the future success of Danne. Visit one of the many towns in Danne to experience each ones unique atmosphere, culture and way of life.
             </div>
 
         </div>
@@ -86,28 +84,20 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
-                <h1>Quests</h1>
-                <p>Travel the map completing tons of custom quests, battling mobs and completing tasks to earn XP and emeralds in an attempt to level up and find clues to the King's whereabouts. Along the way, you'll encounter tons of Kingdom citizens, all of who need your help.</p>
+                <h1>Insert Name</h1>
+                <p>Residence to His Heinousness Prince Traeton, ______ greets newcomers to Danne with its massive vault of weapons and defense. Villagers enjoy complete and total protection through the thick walls and high security.</p>
             </div>
             <div class="col-md-2">
-                <h1>Weapons</h1>
-                <p>Battle endless numbers of mobs and compete in PVP dueling with our custom weapons. Each weapon is equipped with various damage levels, and are classified as common, uncommon, unique and rare. The higher level you are, the more powerful the weapons you'll unlock.</p>
+                <h1>Du'berville</h1>
+                <p>With the central focus on Agriculture, Du'berville contributes to the success of Danne by harvesting crops and caring and raising livestock. </p>
             </div>
             <div class="col-md-2">
-                <h1>Dungeons</h1>
-                <p>Battle your way through multiple dungeons throughout the map. You'll have to fight, climb, parkour, and solve puzzles before fighting the boss at the end. If you're successful, you'll be awarded XP and emeralds.</p>
+                <h1>Insert Name</h1>
+                <p>______ has one priority, and that is commerce. Villagers offer unique trades in exchange for emeralds, and players come to ______ to offer their goods and services, too.</p>
             </div>
             <div class="col-md-2">
-                <h1>Unique Features</h1>
-                <ul>
-                    <li>Pure custom plugins</li>
-                    <li>1000x1000 map to explore</li>
-                    <li>Leveling system & XP earning</li>
-                    <li>Magic spells, enchanted weapons and powerful armor</li>
-                    <li>Towns to discover</li>
-                    <li>Interactive storyline and lore</li>
-                    <li>Endless fun</li>
-                </ul>
+                <h1>Insert Name</h1>
+                <p>Containing the harbor that houses Danne's fleet of vessels, the port town of ______ supports Danne through fishing and helping protect Danne from evil monsters that might arise from the Great Ocean.</p>
             </div>
         </div>
     </div>
