--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                     <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
+                    <li><a href="gallery/gallery.html">Gallery</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
