Started up for the Day

--- a/gear.html
+++ b/gear.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-      <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,6 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -58,54 +59,23 @@
     </nav>
     <center>
         <div class="jumbotron bg">
-            <h1>Hello, world!</h1>
-            <p>...</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <h1>Features</h1>
         </div>
     </center>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 col-md-offset-1">
-                <h1>
-                Who we are    
-                </h1>
-                <p>
-                    The Kingdom of Danne- Once a thriving, prosperous and happy kingdom ruled by a kind and generous king. However, a dark force kidnapped him, filling the jovial land with evil monsters and dark magic. Will you help us find our King? Will you help save Danne? The server is currently in development, and is expected to be released soon. If you're interested in helping us out, apply today.
-                </p>
-            </div>
-            <div class="col-md-7">
+
+            <div class="col-md-7 col-md-offset-1">
                 <div class="img-container">
                     <img src="assets/imgs/castle.png">
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 col-md-offset-2">
-                <h1>Quests</h1>
-                <p>Travel the map completing tons of custom quests, battling mobs and completing tasks to earn XP and emeralds in an attempt to level up and find clues to the King's whereabouts. Along the way, you'll encounter tons of Kingdom citizens, all of who need your help.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Weapons</h1>
-                <p>Battle endless numbers of mobs and compete in PVP dueling with our custom weapons. Each weapon is equipped with various damage levels, and are classified as common, uncommon, unique and rare. The higher level you are, the more powerful the weapons you'll unlock.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Dungeons</h1>
-                <p>Battle your way through multiple dungeons throughout the map. You'll have to fight, climb, parkour, and solve puzzles before fighting the boss at the end. If you're successful, you'll be awarded XP and emeralds.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Unique Features</h1>
-                <ul>
-                    <li>Pure custom plugins</li>
-                    <li>1000x1000 map to explore</li>
-                    <li>Leveling system & XP earning</li>
-                    <li>Magic spells, enchanted weapons and powerful armor</li>
-                    <li>Towns to discover</li>
-                    <li>Interactive storyline and lore</li>
-                    <li>Endless fun</li>
-                </ul>
+            <div class="col-md-3">
+                <h1>
+                Armor and Weapons   
+                </h1>
+                <p>
+                    KingdomLife offers hundreds of weapons and armor types to collect- each with unique damage levels and abilities. The higher level you are, the more powerful weapons you'll be able to unlock. ​Enhance your weapons by applying effects. Effects can range from bonus loot to extra mana or even extra XP. The possibilities are endless. </p>
             </div>
         </div>
     </div>
