--- a/about_us.html
+++ b/about_us.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-    <nav class="navbar navbar-default navbar-fixed-top">
+     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,6 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
+                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -65,6 +66,7 @@
             </div>
         </div>
     </center>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 col-md-offset-1">
@@ -82,7 +84,6 @@
             </div>
         </div>
     </div>
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
