--- a/dungeons.html
+++ b/dungeons.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-     <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,6 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -59,12 +60,42 @@
     <center>
         <div class="jumbotron bg">
             <div class="container" style="height: 400px;">
-                <h1>Kingdom Life</h1>
-                <p>Take back your kingdom</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Apply For Staff</a></p>
+                <h1>Features</h1>
+
+            </div>
+    </center>
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-md-7 col-md-offset-1">
+                <div class="img-container">
+                    <img src="assets/imgs/castle.png">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h1>
+                Dungeons  
+                </h1>
+                <p>
+                    Dungeons are extremely ancient and dangerous areas spread around the map. Each contains a unique theme and requires tedious twists, perilous jumps and defeating a boss to conquer the dungeon, earning bookoo's of XP and loot. </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 col-md-offset-1">
+                <h1>Fighting</h1>
+                <p>Each dungeon contains tons of extremely strong mobs that must be defeated to proceed. Some have special abilities, others have brute strength.</p>
+            </div>
+            <div class="col-md-3">
+                <h1>Puzzle and Parkour</h1>
+                <p>Dungeons also have special sections that require brainpower or parkour to continue. Solve anything from simple to complex puzzles and problems to keep going through the dungeon.</p>
+            </div>
+            <div class="col-md-3">
+                <h1>Rewards</h1>
+                <p>Once you've gotten past the fighting, puzzle and parkour section of the dungeon and defeated the boss, you'll earn tons of emeralds and experience points to help you level up.</p>
             </div>
         </div>
-    </center>
+    </div>
 </body>
 
 </html>
