Just added a cool 404 Page. Its bruce from family guy saying oh no

--- a/404.html
+++ b/404.html
@@ -13,106 +13,11 @@
 </head>
 
 <body>
-
-    <!--- NAV BAR --->
-     <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Kingdom Life RPG</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="about_us.html">About Us</a></li>
-                    <li><a href="staff.html">Staff</a></li>
-                    <li><a href="map/index.html">Map</a></li>
-                    <li><a href="gallery/gallery.html">Gallery</a></li>
-                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
-                    <li class="dropdown">
-                        <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="gear.html">Armor and Weapons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="towns.html">Towns</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="dungeons.html">Dungeons</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="spells.html">Spells</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="quests.html">Quests</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-    <center>
-        <div class="jumbotron bg">
-            <div class="container" style="height: 400px;">
-                <h1>Kingdom Life</h1>
-                <p>Take back your kingdom</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Apply For Staff</a></p>
-            </div>
-        </div>
-    </center>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 col-md-offset-1">
-                <h1>
-                Who we are    
-                </h1>
-                <p>
-                    The Kingdom of Danne- Once a thriving, prosperous and happy kingdom ruled by a kind and generous king. However, a dark force kidnapped him, filling the jovial land with evil monsters and dark magic. Will you help us find our King? Will you help save Danne? The server is currently in development, and is expected to be released soon. If you're interested in helping us out, apply today.
-                </p>
-            </div>
-            <div class="col-md-7">
-                <div class="img-container">
-                    <img src="assets/imgs/castle.png">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 col-md-offset-2">
-                <h1>Quests</h1>
-                <p>Travel the map completing tons of custom quests, battling mobs and completing tasks to earn XP and emeralds in an attempt to level up and find clues to the King's whereabouts. Along the way, you'll encounter tons of Kingdom citizens, all of who need your help.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Weapons</h1>
-                <p>Battle endless numbers of mobs and compete in PVP dueling with our custom weapons. Each weapon is equipped with various damage levels, and are classified as common, uncommon, unique and rare. The higher level you are, the more powerful the weapons you'll unlock.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Dungeons</h1>
-                <p>Battle your way through multiple dungeons throughout the map. You'll have to fight, climb, parkour, and solve puzzles before fighting the boss at the end. If you're successful, you'll be awarded XP and emeralds.</p>
-            </div>
-            <div class="col-md-2">
-                <h1>Unique Features</h1>
-                <ul>
-                    <li>Pure custom plugins</li>
-                    <li>1000x1000 map to explore</li>
-                    <li>Leveling system & XP earning</li>
-                    <li>Magic spells, enchanted weapons and powerful armor</li>
-                    <li>Towns to discover</li>
-                    <li>Interactive storyline and lore</li>
-                    <li>Endless fun</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
+    <audio autoplay controls loop>
+        <source src="/assets/audio/Oh%20No.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
+    </audio>
+    <h1>OH NO. </h1>
+    <img src="assets/imgs/image.jpg">
 </body>
 
 </html>
