--- a/404.html
+++ b/404.html
@@ -16,8 +16,10 @@
     <audio autoplay controls loop>
         <source src="/assets/audio/Oh%20No.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
     </audio>
-    <h1>OH NO. </h1>
     <img src="assets/imgs/image.jpg">
+    <h1>Seems you encountered a 404</h1>
+    <h1>OH NO. You took a wrong turn. Go back and take a better path.  </h1>
+
 </body>
 
 </html>
