--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <audio autoplay controls loop>
+    <audio autoplay loop>
         <source src="/assets/audio/Oh%20No.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
     </audio>
     <img src="assets/imgs/image.jpg">
