Just did some work.

--- a/404.html
+++ b/404.html
@@ -16,7 +16,8 @@
     <audio autoplay loop>
         <source src="/assets/audio/Oh%20No.mp3" type="audio/mpeg"> Your browser does not support the audio tag.
     </audio>
-    <img src="assets/imgs/image.jpg">
+    <h1 style="font-size:40px;">ERROR 404! ERROR 404! GO BACK</h1>
+    <hr>
     <h1>Seems you encountered a 404</h1>
     <h1>OH NO. You took a wrong turn. Go back and take a better path.  </h1>
 
