--- a/donate.html
+++ b/donate.html
@@ -67,11 +67,11 @@
             <div class="container" style="height: 400px;">
 
                 <h1 style="color:white;">Kingdom Life</h1>
-                <p style="color:white;">Take back your kingdom</p>
-                <p><a class=" btn btn-primary btn-lg " href="apply.html " role="button ">Apply For Staff</a></p>
+                <p style="color:white;">Donations</p>
             </div>
         </div>
     </center>
+    <h1>THERE WILL BE SO MUCH MORE HERE. TIME WILL PROVIDE MORE ON THIS PAGE. THIS PAGE IS MEANT FOR THE DONATIONS. </h1>
 </body>
 
 </html>
