--- a/staff.html
+++ b/staff.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-     <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,7 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
-                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -58,7 +58,22 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <div class="jumbotron bg">
+        <div class="container" style="height: 400px;">
 
+            <h1 style="color:white;">Kingdom Life</h1>
+            <p style="color:white;">Staff List</p>
+        </div>
+    </div>
+    <h1>DA Boss</h1>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-1"></div>
+        <div class="col-md-4">Traeton Matty</div>
+        <div class="col-md-4"></div>
+
+    </div>
+    <h1>The Dev Team</h1>
+    <center>The Lead Dev- ShowBiz</center>
 
 </body>
 
