--- a/donate.html
+++ b/donate.html
@@ -63,7 +63,7 @@
     </nav>
 
     <center>
-        <div class="jumbotron bg">
+        <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <div class="container" style="height: 400px;">
 
                 <h1 style="color:white;">Kingdom Life</h1>
