--- a/gear.html
+++ b/gear.html
@@ -58,7 +58,7 @@
         <!-- /.container-fluid -->
     </nav>
     <center>
-        <div class="jumbotron bg">
+        <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <h1>Features</h1>
         </div>
     </center>
