--- a/spells.html
+++ b/spells.html
@@ -58,7 +58,7 @@
         <!-- /.container-fluid -->
     </nav>
     <center>
-        <div class="jumbotron bg">
+        <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <h1>Hello, world!</h1>
             <p>...</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
