--- a/features.html
+++ b/features.html
@@ -36,7 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
-                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -58,7 +58,7 @@
         <!-- /.container-fluid -->
     </nav>
     <center>
-        <div class="jumbotron bg">
+        <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <h1>Features</h1>
             <br />
             <br />
