--- a/quests.html
+++ b/quests.html
@@ -15,7 +15,7 @@
 <body>
 
     <!--- NAV BAR --->
-     <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -36,7 +36,7 @@
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
-                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -58,13 +58,13 @@
         <!-- /.container-fluid -->
     </nav>
     <center>
-        <div class="jumbotron bg">
+        <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
             <h1>Hello, world!</h1>
             <p>...</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         </div>
     </center>
-    
+
 
 </body>
 
