--- a/staff.html
+++ b/staff.html
@@ -58,7 +58,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <div class="jumbotron bg">
+    <div class="jumbotron bg" style="background-image: url(/assets/imgs/castle.png);">
         <div class="container" style="height: 400px;">
 
             <h1 style="color:white;">Kingdom Life</h1>
