DID things that matter to the website. Added the favicon

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -8,6 +8,7 @@
 
 <head>
     <title>Gallery</title>
+    <link rel="shortcut icon" type="image/jpg" href="../fav.jpg" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
