--- a/staff.html
+++ b/staff.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -32,11 +33,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
+
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
                     <li><a href="gallery/gallery.html">Gallery</a></li>
                     <li><a href="about_us.html">Wiki(Doesnt Work)</a></li>
+                    <li><a href="https://github.com/KingdomLife/KingdomLife-API">The API</a></li>
                     <li class="dropdown">
                         <a href="features.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Features <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -65,15 +68,21 @@
             <p style="color:white;">Staff List</p>
         </div>
     </div>
-    <h1>DA Boss</h1>
+    <h1>The Founder</h1>
     <div class="row">
-        <div class="col-md-3 col-md-offset-1"></div>
-        <div class="col-md-4">Traeton Matty</div>
+        <div class="col-md-3 col-md-offset-1" style="font-size:20px;">Traeton Matty</div>
+        <div class="col-md-4"></div>
         <div class="col-md-4"></div>
 
     </div>
     <h1>The Dev Team</h1>
-    <center>The Lead Dev- ShowBiz</center>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-2"></div>
 
 </body>
 
