--- a/staff.html
+++ b/staff.html
@@ -73,7 +73,12 @@
 
     </div>
     <h1>The Dev Team</h1>
-    <center>The Lead Dev- ShowBiz</center>
+    <center>The Head Dev- ShowbizLocket</center>
+    <center>The Webguy/Sys Admin - Ewm2000 </center>
+
+    <center>The Builders</center>
+    <center></center>
+
 
 </body>
 
