--- a/features.html
+++ b/features.html
@@ -11,12 +11,28 @@
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-75171729-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
 
     <!--- NAV BAR --->
-      <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -33,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                    
+
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="staff.html">Staff</a></li>
                     <li><a href="map/index.html">Map</a></li>
