--- a/staff.html
+++ b/staff.html
@@ -11,6 +11,22 @@
     <script src="js/jQuery.js"></script>
     <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-75171729-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
@@ -76,14 +92,13 @@
 
     </div>
     <h1>The Dev Team</h1>
-<<<<<<< HEAD
     <center>The Head Dev- ShowbizLocket</center>
     <center>The Webguy/Sys Admin - Ewm2000 </center>
 
     <center>The Builders</center>
     <center></center>
 
-=======
+
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-2"></div>
@@ -91,8 +106,8 @@
         <div class="col-md-2"></div>
         <div class="col-md-2"></div>
         <div class="col-md-2"></div>
->>>>>>> c2e55f34845ac4eac5466e3a90a58a9f6cdb16f8
 
+    </div>
 </body>
 
 </html>
