Added more so that the site can be discovered. This is all for so that people can discover us easier when they search for us. TIME TO START TO GO PUBLIC

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="description" content="Kingdom Life MMO Minecraft Server">
+    <meta name="keywords" content="Kingdom,Life,Kingdom Life, MMO, Kingdom Life MMO, Minecraft Server, Minecraft, Server">
+    <meta name="author" content="ewm2000">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/jpg" href="fav.jpg" />
     <link href="render.css" rel="stylesheet" type="text/css">
