--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="description" content="Kingdom Life MMO Minecraft Server">
+    <meta name="keywords" content="Kingdom,Life,Kingdom Life, MMO, Kingdom Life MMO, Minecraft Server, Minecraft, Server">
+    <meta name="author" content="ewm2000">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="render.css" rel="stylesheet" type="text/css">
     <title>Kingdom Life</title>
