Made the Iframe of the Store responsive and Began working on a footer.

--- a/donate.html
+++ b/donate.html
@@ -91,7 +91,7 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe src="http://kingdomlifemmo.minecraftmarket.com" frameborder="0" seamless>(Support for older browsers)</iframe>
+        <iframe class="embed-responsive-item" src="http://kingdomlifemmo.minecraftmarket.com">(Support for older browsers)</iframe>
     </div>
 </body>
 
