--- a/index.html
+++ b/index.html
@@ -102,5 +102,13 @@
         </div>
     </center>
 </body>
+<footer style="background-color:#838383;">
+    <div class="row">
+        <h1>
+        <div class="col-md-offset-2 col-md-2">THISS A SSSSS </div>
+        </h1>
+    </div>
+
+</footer>
 
 </html>
