Ads got rejected. Well time to find a new ad system

--- a/index.html
+++ b/index.html
@@ -101,17 +101,13 @@
             </div>
         </div>
     </center>
-    <script type="text/javascript">
-        var infolinks_pid = 2651428;
-        var infolinks_wsid = 0;
-    </script>
-    <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
+
 </body>
 <footer style="background-color:#838383;">
     <div class="row">
 
         <div class="col-md-offset-2 col-md-2">
-            <h3>Need to talk to someone</h3> Email:support@kingdomlifemmo.com
+            <h3>Need to talk to someone</h3> Email:
         </div>
 
     </div>
